language/move-lang/tests/move_check/typing/main_return_type_invalid.exp
error: 

   ┌── tests/move_check/typing/main_return_type_invalid.move:1:5 ───
   │
 1 │ fun main(): u64 {
   │     ---- Is not compatible with: '()'
   │     ^^^^ Invalid main return type
   │             --- The type: 'u64'
   │

